container-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/var/lib/registry"
          name: registry-pv
          subPath: "registry"
        - mountPath: "/certs"
          name: certs
      volumes:
      - name: registry-pv
        persistentVolumeClaim:
          claimName: registry-pvc
      - name: certs
        secret:
          secretName: registry-certs
